# old_minecraft_protocol

./: .gitignore  Cargo.toml  NOTICE  README.md  build.rs
builder/: Cargo.toml  README.md
builder/configs/: default_type_impls.json
builder/src/: error.rs  main.rs
builder/src/code_gen/: mod.rs
builder/src/configs/: type_impls.rs
builder/src/data/: git.rs  mod.rs
builder/src/version_generator/: block_collision_shapes.rs  blocks.rs  effects.rs  enchantments.rs  instruments.rs  items.rs  materials.rs  mod.rs  recipes.rs  version.rs
builder/src/version_generator/protocol/: mod.rs  packet_generator.rs
builder/src/version_generator/protocol/types/: array.rs  container.rs  mod.rs  switch.rs
common/: Cargo.toml
common/src/: attributes.rs  biomes.rs  items.rs  lib.rs  namespace_key.rs  protocol.rs  tints.rs
common/src/common/: block_collision_shapes.rs  effects.rs  entities.rs  foods.rs  instruments.rs  mod.rs  protocol.rs  recipes.rs  version.rs  windows.rs
common/src/common/data/: fpoints.rs  sints.rs  uints.rs
common/src/data/: bitfield.rs  fpoints.rs  mod.rs  nbt.rs  position.rs  sints.rs  uints.rs  var_int.rs
common/src/java/: handshake.rs  mod.rs  no_version.rs
common/src/packets/: mod.rs
common/src/packets/handshake/: mod.rs
common/src/packets/play/: client_bound.rs  mod.rs  server_bound.rs
common/src/packets/status/: client_bound.rs  mod.rs  server_bound.rs
common/src/versions/: mod.rs
java/v1_19/: Cargo.toml
java/v1_19/src/: lib.rs  login.rs  play.rs  status.rs
java/v1_19/src/protocol/: mod.rs  types.rs
java/v1_19/src/protocol/handshake/: mod.rs  sb_packet_legacy_server_list_ping.rs  sb_packet_set_protocol.rs
java/v1_19/src/protocol/login/: cb_packet_compress.rs  cb_packet_disconnect.rs  cb_packet_encryption_begin.rs  cb_packet_login_plugin_request.rs  cb_packet_success.rs  mod.rs  sb_packet_encryption_begin.rs  sb_packet_login_plugin_response.rs  sb_packet_login_start.rs
java/v1_19/src/protocol/play/: cb_packet_abilities.rs  cb_packet_acknowledge_player_digging.rs  cb_packet_action_bar.rs  cb_packet_advancements.rs  cb_packet_animation.rs  cb_packet_attach_entity.rs  cb_packet_block_action.rs  cb_packet_block_break_animation.rs  cb_packet_block_change.rs  cb_packet_boss_bar.rs  cb_packet_camera.rs  cb_packet_chat.rs  cb_packet_clear_titles.rs  cb_packet_close_window.rs  cb_packet_collect.rs  cb_packet_craft_progress_bar.rs  cb_packet_craft_recipe_response.rs  cb_packet_custom_payload.rs  cb_packet_death_combat_event.rs  cb_packet_declare_commands.rs  cb_packet_declare_recipes.rs  (+132 more)
(+69 files in other folders)
