[package]
name = "minecraft_data_builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.15.0"
convert_case = "0.5"
clap = { version = "4", features = ["derive"] }
thiserror = "1"
minecraft-data-rs = { git = "https://github.com/axolotl-rs/minecraft-data-rs.git", branch = "main", default-features = false }
#minecraft-data-rs = { path = "../../minecraft-data-rs" }
log = "0.4"
simplelog = "0.12"
rust-embed = { version = "6.4", features = ["interpolate-folder-path"] }
genco = { version = "0.17" }