[package]
name = "minecraft_data"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder="1"
bytes="1"
uuid="1"
axolotl-nbt={git="https://github.com/axolotl-rs/axolotl-nbt.git", features=["value"]}